2007-09-05  Marcus Brinkmann  <marcus@g10code.de>

	* gpgex.h (class gpgex_t): Make destructor virtual to silence
	compiler warning.

	* Makefile.am (ICON_NAMES, ICON_SIZES, ICONS): New variables.
	(gpgex_SOURCES): Add $(ICONS).

	* Makefile.am (gpgex_LDADD): More -lws2_32 after ./libassuan.a.
	

2007-09-04  Marcus Brinkmann  <marcus@g10code.de>

	* Makefile.am (AM_CFLAGS, AM_CXXFLAGS): Remove $(GPGME_CFLAGS),
	add $(LIBASSUAN_CFLAGS) and $(GPG_ERROR_CFLAGS).
	(gpgex_SOURCES): Add client.h and client.cc.
	(libgpg-error.a, libassuan.a, clean-local): New targets.
	(gpgex_LDADD): Add ./libassuan.a and ./libgpg-error.a.
	* client.h, client.cc: New files.
	* gpgex.cc: Include client.h.
	(gpgex_t::InvokeCommand): Use client class to implement bunch of
	functionality.
	* main.h: Include <gpg-error.h>.
	(DEBUG_ASSUAN, REGKEY, TRACE_GPGERR): New macros.
	* main.cc: Include <gpg-error.h> and <assuan.h>.
	(REGKEY): Deleted.
	(debug_init): Free filename and add DEBUG_ASSUAN to debug flags.
	(DllMain): Set assuan log stream and prefix, and the error source.

2007-09-03  Marcus Brinkmann  <marcus@g10code.de>

	* bitmaps.h, bitmaps.cc, icons.rc, icon-key-12.bmp,
	icon-key-16.bmp: New files.
	* Makefile.am (gpgex_SOURCES): Add icons.rc, bitmaps.h and
	bitmaps.cc.
	(noinst_gpgex_SOURCES): Add versioninfo.rc.
	(gpgex_LDADD): Add -lgdi32.
	(resource.o): Remove target.
	* gpgex.h: Include bitmaps.h.
	(class gpgex_t): New member key_bitmap.
	(gpgex_t::gpgex_t, gpgex_t::~gpgex_t): Initialize and deinitialize
	it.
	* gpgex.cc (gpgex_t::QueryContextMenu): Add dummy bitmap for menu.

2007-08-31  Marcus Brinkmann  <marcus@g10code.de>

	* gpgex.cc (gpgex_t::QueryContextMenu): Fix menu separators.

2007-08-30  Marcus Brinkmann  <marcus@g10code.de>

	* gpgex.h (ID_CMD_HELP, ID_CMD_VERIFY_DECRYPT)
	(ID_CMD_SIGN_ENCRYPT, ID_CMD_IMPORT, ID_CMD_MAX)
	(ID_CMD_STR_HELP, ID_CMD_STR_VERIFY_DECRYPT)
	(ID_CMD_STR_SIGN_ENCRYPT, ID_CMD_STR_IMPORT): New macros.
	(class gpgex_t): New member ALL_FILES_GPG.