@@ -22,7 +22,19 @@
 #include <config.h>
 #endif
 
+#include <unistd.h>
 #include <windows.h>
+
+#include <shlobj.h>
+#ifndef CSIDL_APPDATA
+#define CSIDL_APPDATA 0x001a
+#endif
+#ifndef CSIDL_LOCAL_APPDATA
+#define CSIDL_LOCAL_APPDATA 0x001c
+#endif
+#ifndef CSIDL_FLAG_CREATE
+#define CSIDL_FLAG_CREATE 0x8000
+#endif
 
 #include "registry.h"
 
@@ -175,4 +187,85 @@ read_w32_registry_string (const char *root, const char *dir, const char *name)
  leave:
   RegCloseKey( key_handle );
   return result;
+}
+
+
+/* Get the standard home directory.  In general this function should
+   not be used as it does not consider a registry value (under W32) or
+   the GNUPGHOME encironment variable.  It is better to use
+   default_homedir(). */
+static char *
+standard_homedir (void)
+{
+  static char *dir;
+
+  if (!dir)
+    {
+      char path[MAX_PATH];
+      
+      /* It might be better to use LOCAL_APPDATA because this is
+         defined as "non roaming" and thus more likely to be kept
+         locally.  For private keys this is desired.  However, given
+         that many users copy private keys anyway forth and back,
+         using a system roaming services might be better than to let
+         them do it manually.  A security conscious user will anyway
+         use the registry entry to have better control.  */
+      if (w32_shgetfolderpath (NULL, CSIDL_APPDATA|CSIDL_FLAG_CREATE, 
+                               NULL, 0, path) >= 0) 
+        {
+          char *tmp = malloc (strlen (path) + 6 + 1);
+
+	  strcpy (tmp, path);
+	  strcat (tmp, "\\gnupg");
+
+          dir = tmp;
+          
+          /* Try to create the directory if it does not yet exists.  */
+          if (access (dir, F_OK))
+            CreateDirectory (dir, NULL);
+        }
+      else
+        dir = "C:\\gnupg";
+    }
+  return dir;
+}
+
+
+/* Retrieve the default home directory.  */
+char *
+default_homedir (void)
+{
+  char *dir;
+
+  dir = getenv ("GNUPGHOME");
+  if (!dir || !*dir)
+    {
+      static char *saved_dir;
+      
+      if (!saved_dir)
+        {
+          if (!dir || !*dir)
+            {
+              char *tmp;
+
+              tmp = read_w32_registry_string (NULL, "Software\\GNU\\GnuPG",
+                                              "HomeDir");
+              if (tmp && *tmp)
+                {
+                  free (tmp);
+                  tmp = NULL;
+                }
+              if (tmp)
+                saved_dir = tmp;
+            }
+          
+          if (!saved_dir)
+            saved_dir = standard_homedir ();
+        }
+      dir = saved_dir;
+    }
+  if (!dir || !*dir)
+    dir = "C:\\gnupg";
+
+  return dir;
 }
