@@ -1,3 +1,11 @@
+2007-09-11  Marcus Brinkmann  <marcus@g10code.de>
+
+	* Makefile.am (libgpg-error.a, libassuan.a): Use -f flag with ln.
+	* registry.h (default_dir): New prototype.
+	* registry.c (default_dir, standard_homedir): New functions.
+	* client.cc (default_socket_name): Use default home dir instead
+	install directory.
+
 2007-09-05  Marcus Brinkmann  <marcus@g10code.de>
 
 	* gpgex.h (class gpgex_t): Make destructor virtual to silence
